--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -94,6 +94,7 @@
       <footer></footer>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Contacto</h1>
+        <a href="#"></a>
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Servicios</h1>
