--- a/home.html
+++ b/home.html
@@ -2,15 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>JECDesign</title>
     <style media="screen">
-      img{
+    *{
+      padding: 0px;
+      margin: 0px;
+      box-sizing: border-box;
+    }
+      .fondo{
         width: 100%;
-        height: 720px;
+        height: 730px;
+      }
+      .logo{
+        width: 10%;
+        height: 10%;
+        margin-top: 530px;
+        margin-left: 45%;
+      }
+      .contenido{
+        z-index: 1;
+        position: absolute;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <img src="home1.jpg" alt="">
+    <div class="contenido">
+      <img src="logo.png" alt="logo" class="logo">
+    </div>
+    <img src="home4.gif" alt="fondo" class="fondo">
   </body>
 </html>
