--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -32,6 +32,21 @@
       #mapa{
         width: 25%;
       }
+      #cont{
+        margin-top: 20%;
+      }
+      #cont h1{
+        margin-left: 50%;
+      }
+      #cont img{
+        width: 40%;
+      }
+      #cont .javi{
+        margin-left: 15%;
+      }
+      .desarrolladores{
+        padding-left: 5%;
+      }
     </style>
 </head>
 
@@ -67,17 +82,18 @@
         </nav>
           </header>
         </div>
-        <div class="row pt-5">
+        <div id="cont" class="row pt-5">
             <div class="col-xl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9">
               <section class="row">
-                <article class="order-xl-1 order-lg-2 order-md-2  order-sm-2 order-2">
-
+                <h1>Desarrolladores:</h1>
+                <article class="desarrolladores javi col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <img src="javi.jpg" alt="Javi">
                 </article>
-                <article class="order-xl-2 order-lg-2 order-md-1 order-sm-1 order-1">
-
+                <article class="eric col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <img src="eric.jpg" alt="Eric">
                 </article>
-                <article class="d-sm-none d-md-block d-none order-xl-3 order-lg-3 order-md-3 order-sm-3 order-3">
-
+                <article class="celia col-xl-4 col-lg-4 col-md-4 col-sm-12">
+                  <img src="celia.jpg" alt="Celia">
                 </article>
               </section>
             </div>
