--- a/home.html
+++ b/home.html
@@ -11,13 +11,19 @@
     }
       .fondo{
         width: 100%;
-        height: 730px;
+        height: 100%;
       }
       .logo{
         width: 10%;
         height: 10%;
-        margin-top: 530px;
+        margin-top: 40%;
         margin-left: 45%;
+        border: 1px solid black;
+        border-radius: 20%;
+        padding: 1%;
+      }
+      .logo:hover{
+        background-color:#fff;
       }
       .contenido{
         z-index: 1;
@@ -27,9 +33,9 @@
     </style>
   </head>
   <body>
-    <div class="contenido">
-      <img src="logo.png" alt="logo" class="logo">
-    </div>
-    <img src="home4.gif" alt="fondo" class="fondo">
+      <div class="contenido">
+        <a href="QuienesSomos.html"><img src="Logo.svg" alt="logo" class="logo"></a>
+      </div>
+      <img src="home4.gif" alt="fondo" class="fondo">
   </body>
 </html>
