--- a/celia.html
+++ b/celia.html
@@ -48,7 +48,22 @@
           #mapa{
             width: 25%;
           }
-
+         .roja{
+           border: 1px solid black;
+           background: red;
+           width: 50px;
+           height: 25px;
+         }
+         .foto{
+           width: 250px;
+           height: 250px;
+           margin-top: 10%;
+           margin-left: 10%;
+         }
+         #proyectos{
+            margin-top: 10%;
+            margin-left: 35%;
+         }
 
 
     </style>
@@ -87,29 +102,32 @@
           </header>
         </div>
         <div class="row pt-5">
-            <div class="col-xl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9">
+            <div class="">
               <section class="row">
                 <article class="">
 
                      <img src="celia.jpg" alt="" id="celia">
                      <h2>CELIA</h2>
-                     <p>DISEÑADORA web, graduada en el Ies Juan de Garay, en el grado superior de Desarrollo de Aplicaciones Web,con gran experiencia
-                       en el sector  .</p>
+                     <p>Me dedico normalmente a la parte de Diseño Web en los proyectos, siendo mi especialidad CSS y HTML5.Me considero una persona trabajadora tanto en el área familiar como en mi profesión .</p>
+                     <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
+                     <a href="#"><img src="celia/foto1.jpg" alt="" class="foto"></a>
+                     <a href="#"> <img src="celia/foto2.jpg" alt="" class="foto"></a>
+                     <a href="#"><img src="celia/foto3.png" alt="" class="foto"></a>
 
 
 
 
-                </article>
-                <article class="order-xl-2 order-lg-2 order-md-1 order-sm-1 order-1">
 
 
 
 
 
-                </article>
-                <article class="d-sm-none d-md-block d-none order-xl-3 order-lg-3 order-md-3 order-sm-3 order-3">
 
-                </article>
+
+
+
+
+
               </section>
             </div>
         </div>
