--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -75,12 +75,14 @@
         background-color: blue;
         width: 20%;
         height: 20%;
+        margin-left: 50%;
         display: none;
       }
       .celia{
         background-color: red;
         width: 20%;
         height: 20%;
+        margin-left: 70%;
         display: none;
       }
       .comentario{
@@ -110,6 +112,27 @@
       .comentariosPositivos{
         margin-top:250px;
         margin-left: 2%;
+      }
+      .wBasica{
+        margin-top: 150px;
+        margin-left: 20%;
+        border: 1px solid red;
+        background-color: red;
+        color: white;
+      }
+      .WAlojamiento{
+        margin-top: 150px;
+        margin-left: 0.5%;
+        border: 1px solid #FFCA28;
+        background-color: #FFCA28;
+        color: white;
+      }
+      .WAlojamientoSeo{
+        margin-top: 150px;
+        margin-left: 0.5%;
+        border: 1px solid green;
+        background-color: green;
+        color: white;
       }
     </style>
     <script type="text/javascript">
@@ -179,6 +202,26 @@
                 <img id="avatar" src="av1.png" alt="avatar">
                 <div class="comentario">
                 Me encanta esta pagina!!!!
+                </div>
+              </section>
+              <section class="row infoPrecios">
+                <div class="wBasica col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                  <h3>WEB BASICA</h3><br>
+                  <h5>PERO MUY COMPLETA</h5>
+                  <h1>400 €</h1>
+                  <div class="">
+                    
+                  </div>
+                </div>
+                <div class="WAlojamiento col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                  <h3>WEB CON ALOJAMIENTO</h3><br>
+                  <h5>TODO LO QUE NECESITAS</h5>
+                  <h1>451 €</h1>
+                </div>
+                <div class="WAlojamientoSeo col-xl-3 col-lg-3 col-md-3 col-sm-12">
+                  <h3>WEB CON ALOJAMIENTO Y SEO</h3><br>
+                  <h5>¡ DESPEGA !</h5>
+                  <h1>551 €</h1>
                 </div>
               </section>
             </div>
