--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -68,22 +68,19 @@
         background-color: red;
         width: 20%;
         height: 20%;
-        margin-left: 30%;
-        display: none;
+        /* display: none; */
       }
       .eric{
         background-color: blue;
         width: 20%;
         height: 20%;
-        margin-left: 50%;
-        display: none;
+        /* display: none; */
       }
       .celia{
         background-color: red;
         width: 20%;
         height: 20%;
-        margin-left: 70%;
-        display: none;
+        /* display: none; */
       }
       .comentario{
       border-radius: 5px;
@@ -187,12 +184,18 @@
             <div class="col-xl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9">
               <section class="row">
                 <h1>Desarrolladores:</h1>
-                <img id="javi" src="javi.jpg" alt="Javi" data-toggle="tooltip" data-placement="bottom" title="Javi!">
-                <img id="eric" src="eric.jpg" alt="Eric" data-toggle="tooltip" data-placement="bottom" title="Eric!">
-                <img id="celia" src="celia.jpg" alt="Celia" data-toggle="tooltip" data-placement="bottom" title="Celia!">
-                <div class="javi"></div>
+                <div class="javi col-xl-4 col-lg-4 col-md-4 col-sm-4 ">
+                  <a href="#"><img id="javi" src="javi.jpg" alt="Javi" data-toggle="tooltip" data-placement="bottom" title="Javi!"></a>
+                </div>
+                <div class="eric col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                  <a href="#"><img id="eric" src="eric.jpg" alt="Eric" data-toggle="tooltip" data-placement="bottom" title="Eric!"></a>
+                </div>
+                <div class=" celia col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                  <a href="#"><img id="celia" src="celia.jpg" alt="Celia" data-toggle="tooltip" data-placement="bottom" title="Celia!"></a>
+                </div>
+                <!-- <div class="javi"></div>
                 <div class="eric"></div>
-                <div class="celia"></div>
+                <div class="celia"></div> -->
               </section>
               <section class="row infoEmpresa">
                 <h1>Información de la empresa</h1>
@@ -210,7 +213,7 @@
                   <h5>PERO MUY COMPLETA</h5>
                   <h1>400 €</h1>
                   <div class="">
-                    
+
                   </div>
                 </div>
                 <div class="WAlojamiento col-xl-3 col-lg-3 col-md-3 col-sm-12">
