--- a/inicio.html
+++ b/inicio.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>CELIA</title>
+    <title>INICIO</title>
     <meta charset="UTF-8">
      <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,17 +21,7 @@
       #navbarSupportedContent{
         margin-left: 40%;
       }
-      #celia{
-        margin-top: 200px;
-        width: 20%;
-        height: 20%;
-        margin-left: 20%;
-        float: left;
-        padding-right: 1%;
 
-
-
-      }
       footer{
         clear: both;
        text-align: center;
@@ -45,69 +35,85 @@
              padding-left:  20%;
           }
           #pie{
-            margin-top: 30%;
+            margin-top: 70%;
           }
           #mapa{
             width: 25%;
           }
-         .roja{
-           border: 1px solid black;
-           background: red;
-           width: 50px;
-           height: 25px;
-         }
-         .foto{
-           width: 250px;
-           height: 250px;
-           margin-top: 10%;
-           margin-left: 10%;
-         }
-         #proyectos{
-            margin-top: 10%;
-            margin-left: 35%;
-         }
-         iframe{
-           margin-top: -250px;
-           margin-left: 50%;
-         }
-         .comentario{
-        border-radius: 5px;
-        background-color: #62C0D5;
-        color: floralwhite;
-        padding: 10px;
-        width: 420px;
-        font-family: 'Indie Flower', cursive;
-        font-size: 2em;
-        margin-left: 10%;
-        margin-top: 15%
-        }
 
-        .comentario:before {
-        content:"";
-        position: absolute;
-        width: 0;
-        height: 0;
-        border-bottom: 20px solid ;
-        border-right: 18px solid transparent;
-        border-left: 18px solid transparent;
+          .primero h1{
+
+            color:  #62C0D5;
+          }
+          .contenido{
+            text-align: center;
+          }
+          .primero{
+            margin-top: 15%;
+          }
+          .somosdiferente{
+            margin-top: -100px;
+          }
+          .somosdiferente h2{
+            margin-right: 20%;
+          }
+        #tienda{
+          margin-top: 60%;
+          width: 70%;
+          height: 200px;
+          margin-left: 2%;
+          margin-top: -5px;
 
         }
+        #cms{
+          margin-top: 60%;
+          width: 70%;
+          height: 200px;
+          margin-left: 2%;
+          margin-top: -5px;
+
+
+
+        }
+        #web{
+          margin-top: 60%;
+          width: 70%;
+          height: 200px;
+          margin-left: 2%;
+          margin-top: -5px;
+
+
+        }
+        .servicios1{
+           margin-bottom: -30%;
+          padding: 0px;
+
+        }
+        #seo{
+          margin-top: 60%;
+          width: 70%;
+          height: 200px;
+          margin-left: 2%;
+
+
+
+
+        }
+        #corp{
+          margin-top: 60%;
+          width: 70%;
+          height: 200px;
+          margin-left: 2%;
+
+
+
+        }
+
+
 
     </style>
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $('#foto1').click(function(){
-          $('.foto').slideToggle('slow'){
-            $(this).html('Proyecto realizado par una cafetería');
-          }
-
-        });
 
 
-      });
-
-
-    </script>
 </head>
 
 <body>
@@ -142,36 +148,64 @@
         </nav>
           </header>
         </div>
-        <div class="row pt-5">
-            <div class="">
-              <section class="row">
-                <article class="">
 
-                     <img src="celia.jpg" alt="" id="celia">
-                     <h2>CELIA</h2>
-                     <p>Me dedico normalmente a la parte de Diseño Web en los proyectos, siendo mi especialidad CSS y HTML5.Me considero una persona trabajadora tanto en el área familiar como en mi profesión .</p>
+            <div class="contenido row pt-5">
+                      <div class="primero col-xl-12 col-lg-9 col-md-9 col-sm-9">
+                        <h1>CONÓCENOS</h1>
+                        <img src="img.png" alt="" id="imagenPrincipal">
 
-                     <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
-                     <img src="celia/foto1.jpg" alt="" class="foto" id="foto1">
-                     <!-- <p>Proyecto realizado para una cafetería.</p> -->
-                     <img src="celia/foto2.jpg" alt="" class="foto" id="foto2">
-                     <!-- <p>Proyecto realizado para una bodega</p> -->
-                     <img src="celia/foto3.png" alt="" class="foto" id="foto3">
-                     <!-- <p>Proyecto realizado para una tienda de ropa</p> -->
-                     <div class="comentario">
-                       <p>"   Las fortalezas están en nuestras diferencias, no en nuestras similitudes <strong>Stephen Covey"</strong></p>
+                      </div>
+                      <div class="contacto col-xl-12">
+                        <p>Después de mucho esfuerzo todo tiene su recompesas,por eso somos una empresa con una
+                          gran iniciativa en el mundo digital, difrutamos de lo que hacemos.</p>
 
+
+                      </div>
+
+                  <div class="somosdiferente col-xl-12">
+                      <h2>SOMOS DIFERENTES</h2>
+                      <p>Dedicamos muchas horas a innovar</p>
+                      <p>solucionamos problemas y creamos todo aquello que quieras reflejar en una web</p>
+                      <p>para una gran satisfaccion para nuestros clientes</p>
+                          <img src="img1.png" alt="">
+                          <h2>SERVICIOS</h2>
+
+                  </div>
+
+
+
+
+                     <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                       <img src="tiendaOnline.png" alt="" id="tienda">
                      </div>
-                     <iframe width="560" height="315" src="https://www.youtube.com/embed/NJ8jxvzzzeQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                     <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                       <img src="cms.png" alt="" id="cms">
+                     </div>
+                     <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                         <img src="webMedida.png" alt="" id="web">
+                     </div>
+                     <div class="servicios1 col-xl-4 offset-xl-2 col-lg-4 col-md-4 col-sm-4 col-4">
+                         <img src="seo.png" alt="" id="seo">
+                     </div>
+                     <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
+                         <img src="corporativa.png" alt="" id="corp">
+                     </div>
+
+
+                   </div>
 
 
 
 
 
-              </section>
-            </div>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
     <div  id="pie" class="row bg-dark text-white ">
       <footer></footer>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
