--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -83,7 +83,7 @@
       background-color: chocolate;
       color: floralwhite;
       padding: 10px;
-      width: 420px;
+      width: 65%;
       font-family: 'Indie Flower', cursive;
       font-size: 2em;
       }
@@ -107,7 +107,7 @@
       }
       .comentariosNegativos{
         margin-top:250px;
-        margin-left: 2%;
+        margin-left: 1%;
       }
       .wBasica{
         margin-top: 150px;
@@ -130,6 +130,43 @@
         background-color: green;
         color: white;
       }
+      .comments{
+        margin-left: 35%;
+      }
+      /**/
+      .social {
+	position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+	left: 0%; /* Establecemos la barra en la izquierda */
+	top: 250px; /* Bajamos la barra 200px de arriba a abajo */
+	z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+}
+
+	.social ul {
+		list-style: none;
+    margin-left: 0%;
+	}
+
+	.social ul li a {
+		display: inline-block;
+		color:#fff;
+		background: #000;
+		padding: 10px 15px;
+		text-decoration: none;
+		-webkit-transition:all 500ms ease;
+		-o-transition:all 500ms ease;
+		transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+	}
+
+	.social ul li .icon-facebook {background:#3b5998;} /* Establecemos los colores de cada red social, aprovechando su class */
+	.social ul li .icon-twitter {background: #00abf0;}
+	.social ul li .icon-googleplus {background: #d95232;}
+	.social ul li .icon-pinterest {background: #ae181f;}
+	.social ul li .icon-mail {background: #666666;}
+
+	.social ul li a:hover {
+		background: #000; /* Cambiamos el fondo cuando el usuario pase el mouse */
+		padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+	}
     </style>
     <script type="text/javascript">
       	$(document).ready(function() {
@@ -200,25 +237,38 @@
           </header>
         </div>
         <div id="cont" class="row pt-5">
-            <div class="col-xl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9">
+            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
               <section class="row">
                 <h1>Desarrolladores:</h1>
                   <img id="javi" src="javi.jpg" alt="Javi"  data-toggle="tooltip" data-placement="bottom" title="Javier Dart Belenguer. Desarrollador web">
                   <img id="eric" src="eric.jpg" alt="Eric"  data-toggle="tooltip" data-placement="bottom" title="Eric!">
                   <img id="celia" src="celia.jpg" alt="Celia"  data-toggle="tooltip" data-placement="bottom" title="Celia!">
               </section>
+              <div class="social">
+		              <ul>
+			                 <li><a href="http://www.facebook.com/" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
+			                 <li><a href="http://www.twitter.com/" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
+			                 <li><a href="http://www.googleplus.com/" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
+			                 <li><a href="http://www.pinterest.coms" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+			                 <li><a href="mailto:" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+		             </ul>
+	           </div>
               <section class="row infoEmpresa">
                 <h1>Información de la empresa</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
               </section>
-              <section class="row comentariosPositivos">
-                <img id="avatar" src="av1.png" alt="avatar">
-                <div id="resultado">
+              <section class="row comments">
+                <div class="comentariosPositivos col-xl-5 col-lg-5 col-md-5 col-sm-5">
+                  <img id="avatar" src="av1.png" alt="avatar">
+                  <div id="resultado" class="comentario">
+                    Me encanta!
+                  </div>
                 </div>
-              </section>
-              <section class="row comentariosNegativos">
-                <img id="avatar" src="av1.png" alt="avatar">
-                <div id="resultado">
+                <div class="comentariosNegativos col-xl-5 col-lg-5 col-md-5 col-sm-5">
+                  <img id="avatar" src="av1.png" alt="avatar">
+                  <div id="resultado" class="comentario">
+                    Les odio!
+                  </div>
                 </div>
               </section>
               <section class="row infoPrecios">
