--- a/inicio.html
+++ b/inicio.html
@@ -108,7 +108,17 @@
 
 
         }
+        .fondo{
+          width: 100%;
+          height: 70%;
+          margin-top: -80px;
+           z-index: -1;
+        }
+        .botones{
+          /* margin-top: 50%; */
+             z-index: 1;
 
+        }
 
 
     </style>
@@ -121,10 +131,10 @@
     <div id="contenido">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="Logo.png" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
+            <!-- <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a> -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <img id="logo" src="inicio/Logo.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -150,9 +160,16 @@
         </div>
 
             <div class="contenido row pt-5">
-                      <div class="primero col-xl-12 col-lg-9 col-md-9 col-sm-9">
-                        <h1>CONÓCENOS</h1>
-                        <img src="img.png" alt="" id="imagenPrincipal">
+                      <div class="primero col-xl-12 col-lg-12 col-md-12 col-sm-12">
+
+                        <img src="inicio/fondo.jpg" alt="" class="fondo">
+                        <div class="botones">
+                          <button type="button" name="button" class="boton2"> < </button>
+                            <button type="button" name="button" class="boton1"> > </button>
+
+                        </div>
+
+
 
                       </div>
                       <div class="contacto col-xl-12">
@@ -167,7 +184,7 @@
                       <p>Dedicamos muchas horas a innovar</p>
                       <p>solucionamos problemas y creamos todo aquello que quieras reflejar en una web</p>
                       <p>para una gran satisfaccion para nuestros clientes</p>
-                          <img src="img1.png" alt="">
+                          <img src="inicio/img1.png" alt="">
                           <h2>SERVICIOS</h2>
 
                   </div>
@@ -176,19 +193,19 @@
 
 
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="tiendaOnline.png" alt="" id="tienda">
+                       <img src="inicio/tiendaOnline.png" alt="" id="tienda">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="cms.png" alt="" id="cms">
+                       <img src="inicio/cms.png" alt="" id="cms">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="webMedida.png" alt="" id="web">
+                         <img src="inicio/webMedida.png" alt="" id="web">
                      </div>
                      <div class="servicios1 col-xl-4 offset-xl-2 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="seo.png" alt="" id="seo">
+                         <img src="inicio/seo.png" alt="" id="seo">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="corporativa.png" alt="" id="corp">
+                         <img src="inicio/corporativa.png" alt="" id="corp">
                      </div>
 
 
