--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Contacto</title>
     <style>
     *{
@@ -16,8 +17,8 @@
       background-color: black;
     }
       #logo{
-        width: 10%;
-        padding: 2%;
+        width: 15%;
+
       }
       #titulo{
         vertical-align: middle;
@@ -41,7 +42,7 @@
       .contenido{
         max-width: 80%;
         margin: auto;
-        margin-top: 15%;
+        margin-top: 20%;
         text-align: center;
       }
 
@@ -55,6 +56,51 @@
       .mapa{
         margin: auto;
       }
+      .pie{
+        padding: 2%;
+      }
+      #pie img{
+        width: 40%;
+      }
+      .pie li{
+  list-style: none;
+}
+.pie ul li{
+  display: inline-block;
+  padding-bottom:15px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.pie ul li a i.fa {
+  font-size: 3em;
+  border-radius: 50px;
+
+}
+.pie .fa-facebook-square{
+  color: #204eb1;
+
+}
+.pie  .fa-facebook-square:hover{
+  color: blue;
+}
+.pie  .fa-linkedin-square{
+  color: #007bb6;
+}
+.pie .fa-linkedin-square:hover{
+  color: blue;
+}
+.pie .fa-twitter-square{
+  color: #1dcaff;
+}
+.pie .fa-twitter-square:hover{
+  color: lightblue;
+}
+.pie .fa-instagram{
+  color: #dd9229;
+}
+.pie .fa-instagram:hover{
+  color: yellow;
+}
     </style>
   </head>
   <body>
@@ -62,8 +108,8 @@
     <div id="contenedor">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="Logo.svg" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#"><h1>Titulo de la pagina</h1></a>
+            <img id="logo" src="logo1.png" alt="Logotipo de la pagina web">
+            <a id="titulo" class="navbar-brand" href="#"><h1>JECDesign</h1></a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -149,25 +195,34 @@
         </div>
     </div>
     <div  id="pie" class="row bg-dark text-white ">
-      <footer></footer>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Contacta</h1>
-        <i class="fas fa-phone fa-2x"></i>
-        <a href="tel:+34555000555">555-000-555</a><br>
-        <i class="fas fa-at fa-2x"></i>
-        <a href="mail:correo@gmail.com">correo@gmail.com</a>
-      </div>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Servicios</h1>
-        <a href="#">Desarrollo web</a><br>
-        <a href="#">Desarrollo cliente</a><br>
-        <a href="#">Desarrollo Servidor</a>
-      </div>
-      <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
-        <h1>Oficinas</h1>
-        <img id="mapa" src="imagen.png" alt="mapa">
-      </div>
+      <div class="pie row col-xl-4 col-lg-4 col-md-12 col-sm-12">
+        <div class="col-xl-6 col-lg-6">
+          <a href="home.html"><h4>Inicio</h4></a>
+          <a href="servicios.html"><h4>Servicios</h4></a>
+          <a href="catalogo.html"><h4>Catologo</h4></a>
+        </div>
+        <div class="col-xl-6 col-lg-6">
+          <a href="celia.html"><h4>Celia</h4></a>
+          <a href="eric.html"><h4>Eric</h4></a>
+          <a href="javi.html"><h4>Javi</h4></a>
+        </div>
 
+      </div>
+      <div class="pie col-xl-4 col-lg-4 col-md-12 col-sm-12">
+        <a href="#">Diseño y desarrollo web</a><br>
+        <a href="#">Tienda online</a><br>
+        <a href="#">Web autogestionable</a><br>
+        <a href="#">Posicionamiento SEO</a>
+      </div>
+      <div class="pie col-xl-4 col-lg-4 col-md-12 col-sm-12">
+        <h1>redes sociales</h1>
+        <ul>
+         <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+         <li><a href="#" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+         <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+         <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+       </ul>
+      </div>
     </div>
   </div>
 
