--- a/celia.html
+++ b/celia.html
@@ -13,13 +13,14 @@
     }
       #logo{
         width: 10%;
-        padding: 2%;
+        margin-left: 60px;
+
       }
       #titulo{
         margin-left: 45%;
       }
       #navbarSupportedContent{
-        margin-left: 40%;
+        margin-left: 20%;
       }
       #celia{
         margin-top: 200px;
@@ -35,7 +36,7 @@
       footer{
         clear: both;
        text-align: center;
-         padding: 20px;
+        
           border-top: 2px solid #999999;
           width: 100%;
       }
@@ -115,9 +116,10 @@
     <div id="contenido">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="Logo.png" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a>
+
+
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <img id="logo" src="logo1.png" alt="Logotipo de la pagina web">
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -125,6 +127,9 @@
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link " href="#">Inicio</a>
+                </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Servicios</a>
                   </li>
@@ -137,6 +142,7 @@
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">Blog</a>
                   </li>
+
               </ul>
           </div>
         </nav>
@@ -189,7 +195,7 @@
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Oficinas</h1>
-        <img id="mapa" src="imagen.png" alt="mapa">
+        <img id="mapa" src="map.jpg" alt="mapa">
       </div>
 
     </div>
