--- a/inicio.html
+++ b/inicio.html
@@ -13,13 +13,15 @@
     }
       #logo{
         width: 10%;
-        padding: 2%;
+        margin-left: 20px;
+
+
       }
       #titulo{
         margin-left: 45%;
       }
       #navbarSupportedContent{
-        margin-left: 40%;
+        margin-left: 20%;
       }
 
       footer{
@@ -112,11 +114,12 @@
           width: 100%;
           height: 70%;
           margin-top: -80px;
+          position: absolute;
            z-index: -1;
         }
         .botones{
           /* margin-top: 50%; */
-             z-index: 1;
+          
 
         }
 
@@ -134,7 +137,7 @@
 
             <!-- <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a> -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <img id="logo" src="inicio/Logo.png" alt="Logotipo de la pagina web">
+                <img id="logo" src="inicio/logo1.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -240,7 +243,7 @@
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Oficinas</h1>
-        <img id="mapa" src="imagen.png" alt="mapa">
+        <img id="mapa" src="map.jpg" alt="mapa">
       </div>
 
     </div>
