--- a/inicio.html
+++ b/inicio.html
@@ -12,8 +12,7 @@
       background-color: black;
     }
       #logo{
-        width: 10%;
-        padding: 2%;
+        width: 15%;
       }
       #titulo{
         margin-left: 45%;
@@ -25,7 +24,6 @@
       footer{
         clear: both;
        text-align: center;
-         padding: 20px;
           border-top: 2px solid #999999;
           width: 100%;
       }
@@ -49,7 +47,7 @@
             text-align: center;
           }
           .primero{
-            margin-top: 15%;
+
           }
           .somosdiferente{
             margin-top: -100px;
@@ -95,9 +93,6 @@
           height: 200px;
           margin-left: 2%;
 
-
-
-
         }
         #corp{
           margin-top: 60%;
@@ -105,15 +100,53 @@
           height: 200px;
           margin-left: 2%;
 
-
+        }
+        .fondo{
+          width: 100%;
+          height: 400px;
+          margin-top: 73px;
+          position: absolute;
+          z-index: -1;
+        }
+        .botones{
+          margin-top: 230px;
+          width: 100%;
+        }
+        .boton1{
+          float:right;
+          width: 2%;
+          height: 10%;
+          opacity: 0.5;
+          background-color: black;
+          border-color: black;
+          color: white;
+          font-weight: bold;
+          font-size: 1.4em;
+        }
+        .boton2{
+          float: left;
+          margin-left: 3%;
+          width: 2%;
+          height: 10%;
+          opacity: 0.5;
+          background-color: black;
+          border-color: black;
+          color: white;
+          font-weight: bold;
+          font-size: 1.4em;
 
         }
+        .boton1:hover,.boton2:hover{
+          opacity:0.7;
 
-
-
+        }
+        #navbar{
+          height: 120px;
+        }
+        .contacto{
+          margin-top: 400px;
+        }
     </style>
-
-
 </head>
 
 <body>
@@ -121,10 +154,10 @@
     <div id="contenido">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="Logo.png" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
+            <!-- <a id="titulo" class="navbar-brand" href="#">JECDESIGN</a> -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
+                <img id="logo" src="inicio/logo1.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -149,46 +182,47 @@
           </header>
         </div>
 
-            <div class="contenido row pt-5">
-                      <div class="primero col-xl-12 col-lg-9 col-md-9 col-sm-9">
-                        <h1>CONÓCENOS</h1>
-                        <img src="img.png" alt="" id="imagenPrincipal">
+        <div class="contenido row pt-5">
 
-                      </div>
-                      <div class="contacto col-xl-12">
-                        <p>Después de mucho esfuerzo todo tiene su recompesas,por eso somos una empresa con una
-                          gran iniciativa en el mundo digital, difrutamos de lo que hacemos.</p>
+          <div class="primero row col-xl-12 col-lg-12 col-md-12 col-sm-12">
+              <img src="inicio/fondo.jpg" alt="" class="fondo">
+              <div class="botones">
+                <button type="button" name="button" class="boton2"> <i class="fas fa-angle-left"></i> </button>
+                <button type="button" name="button" class="boton1"> <i class="fas fa-angle-right"></i> </button>
+              </div>
+            </div>
 
+            <div class="contacto col-xl-12">
+              <p>Después de mucho esfuerzo todo tiene su recompesas,por eso somos una empresa con una
+                gran iniciativa en el mundo digital, difrutamos de lo que hacemos.</p>
+            </div>
 
-                      </div>
-
-                  <div class="somosdiferente col-xl-12">
-                      <h2>SOMOS DIFERENTES</h2>
-                      <p>Dedicamos muchas horas a innovar</p>
-                      <p>solucionamos problemas y creamos todo aquello que quieras reflejar en una web</p>
-                      <p>para una gran satisfaccion para nuestros clientes</p>
-                          <img src="img1.png" alt="">
-                          <h2>SERVICIOS</h2>
-
-                  </div>
+            <div class="somosdiferente col-xl-12">
+              <h2>SOMOS DIFERENTES</h2>
+              <p>Dedicamos muchas horas a innovar</p>
+              <p>solucionamos problemas y creamos todo aquello que quieras reflejar en una web</p>
+              <p>para una gran satisfaccion para nuestros clientes</p>
+              <img src="inicio/img1.png" alt="">
+              <h2>SERVICIOS</h2>
+            </div>
 
 
 
 
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="tiendaOnline.png" alt="" id="tienda">
+                       <img src="inicio/tiendaOnline.png" alt="" id="tienda">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                       <img src="cms.png" alt="" id="cms">
+                       <img src="inicio/cms.png" alt="" id="cms">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="webMedida.png" alt="" id="web">
+                         <img src="inicio/webMedida.png" alt="" id="web">
                      </div>
                      <div class="servicios1 col-xl-4 offset-xl-2 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="seo.png" alt="" id="seo">
+                         <img src="inicio/seo.png" alt="" id="seo">
                      </div>
                      <div class="servicios1 col-xl-4 col-lg-4 col-md-4 col-sm-4 col-4">
-                         <img src="corporativa.png" alt="" id="corp">
+                         <img src="inicio/corporativa.png" alt="" id="corp">
                      </div>
 
 
