--- a/QuienesSomos.html
+++ b/QuienesSomos.html
@@ -12,7 +12,7 @@
       background-color: black;
     }
       #logo{
-        width: 10%;
+        width: 15%;
         padding: 2%;
       }
       #titulo{
@@ -83,7 +83,7 @@
       background-color: chocolate;
       color: floralwhite;
       padding: 10px;
-      width: 420px;
+      width: 65%;
       font-family: 'Indie Flower', cursive;
       font-size: 2em;
       }
@@ -107,7 +107,7 @@
       }
       .comentariosNegativos{
         margin-top:250px;
-        margin-left: 2%;
+        margin-left: 1%;
       }
       .wBasica{
         margin-top: 150px;
@@ -130,6 +130,39 @@
         background-color: green;
         color: white;
       }
+      .comments{
+        margin-left: 35%;
+      }
+      /**/
+      .social {
+	position: fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+	left: 0%; /* Establecemos la barra en la izquierda */
+	top: 250px; /* Bajamos la barra 250px de arriba a abajo */
+	z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+}
+	.social ul {
+		list-style: none;
+    margin-left: 0%;
+	}
+	.social ul li a {
+		display: inline-block;
+		color:#fff;
+		background: #000;
+		padding: 15px 15px;
+		text-decoration: none;
+		-webkit-transition:all 500ms ease;
+		-o-transition:all 500ms ease;
+		transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+	}
+	.social ul li .icon-facebook {background:#3b5998; }
+	.social ul li .icon-twitter {background: #00abf0; }
+	.social ul li .icon-googleplus {background: #d95232;}
+	.social ul li .icon-pinterest {background: #ae181f;}
+	.social ul li .icon-mail {background: #666666;}
+	.social ul li a:hover {
+		background: #000; /* Cambiamos el fondo cuando el usuario pase el mouse */
+		padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+	}
     </style>
     <script type="text/javascript">
       	$(document).ready(function() {
@@ -144,7 +177,6 @@
             $(window.open("eric.html"));
           });
         });
-
         // var xhr = new XMLHttpRequest();
         // onload = function(){
         //     var str = Math.floor(Math.random() * (5 - 1)) + 1;
@@ -158,8 +190,6 @@
         //     xhr.send();
         //
         // }
-
-
     </script>
 </head>
 
@@ -168,10 +198,8 @@
     <div id="contenido">
         <div class="row">
           <header class="menu w-100 position-fixed sticky-top">
-            <img id="logo" src="Logo.png" alt="Logotipo de la pagina web">
-            <a id="titulo" class="navbar-brand" href="#">Titulo de la pagina</a>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
+              <img id="logo" src="quienesSomos/logo1.png" alt="Logotipo de la pagina web">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
               </button>
@@ -200,45 +228,38 @@
           </header>
         </div>
         <div id="cont" class="row pt-5">
-            <div class="col-xl-9 col-xl-9 col-lg-9 col-md-9 col-sm-9">
+            <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
               <section class="row">
                 <h1>Desarrolladores:</h1>
-                  <img id="javi" src="javi.jpg" alt="Javi"  data-toggle="tooltip" data-placement="bottom" title="Javier Dart Belenguer. Desarrollador web">
-                  <img id="eric" src="eric.jpg" alt="Eric"  data-toggle="tooltip" data-placement="bottom" title="Eric!">
-                  <img id="celia" src="celia.jpg" alt="Celia"  data-toggle="tooltip" data-placement="bottom" title="Celia!">
+                  <img id="javi" src="quienesSomos/javi.jpg" alt="Javi"  data-toggle="tooltip" data-placement="bottom" title="Javier Dart Belenguer. Desarrollador web">
+                  <img id="eric" src="quienesSomos/eric.jpg" alt="Eric"  data-toggle="tooltip" data-placement="bottom" title="Eric!">
+                  <img id="celia" src="quienesSomos/celia.jpg" alt="Celia"  data-toggle="tooltip" data-placement="bottom" title="Celia!">
               </section>
+              <div class="social">
+		              <ul>
+			                 <li><a href="http://www.facebook.com/" target="_blank" class="icon-facebook"><i class="fab fa-facebook-f"></i></a></li>
+			                 <li><a href="http://www.twitter.com/" target="_blank" class="icon-twitter"><i class="fab fa-twitter"></i></a></li>
+			                 <li><a href="http://www.googleplus.com/" target="_blank" class="icon-googleplus"><i class="fab fa-google-plus"></i></a></li>
+			                 <li><a href="http://www.pinterest.com/" target="_blank" class="icon-pinterest"><i class="fab fa-pinterest-p"></i></a></li>
+			                 <li><a href="mailto:" class="icon-mail"><i class="fas fa-envelope-open"></i></a></li>
+		             </ul>
+	           </div>
               <section class="row infoEmpresa">
                 <h1>Información de la empresa</h1>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
               </section>
-              <section class="row comentariosPositivos">
-                <img id="avatar" src="av1.png" alt="avatar">
-                <div id="resultado">
-                </div>
-              </section>
-              <section class="row comentariosNegativos">
-                <img id="avatar" src="av1.png" alt="avatar">
-                <div id="resultado">
-                </div>
-              </section>
-              <section class="row infoPrecios">
-                <div class="wBasica col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <h3>WEB BASICA</h3><br>
-                  <h5>PERO MUY COMPLETA</h5>
-                  <h1>400 €</h1>
-                  <div class="">
-
+              <section class="row comments">
+                <div class="comentariosPositivos col-xl-5 col-lg-5 col-md-5 col-sm-5">
+                  <img id="avatar" src="quienesSomos/av1.png" alt="avatar">
+                  <div id="resultado" class="comentario">
+                    Me encanta!
                   </div>
                 </div>
-                <div class="WAlojamiento col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <h3>WEB CON ALOJAMIENTO</h3><br>
-                  <h5>TODO LO QUE NECESITAS</h5>
-                  <h1>451 €</h1>
-                </div>
-                <div class="WAlojamientoSeo col-xl-3 col-lg-3 col-md-3 col-sm-12">
-                  <h3>WEB CON ALOJAMIENTO Y SEO</h3><br>
-                  <h5>¡ DESPEGA !</h5>
-                  <h1>551 €</h1>
+                <div class="comentariosNegativos col-xl-5 col-lg-5 col-md-5 col-sm-5">
+                  <img id="avatar" src="quienesSomos/av1.png" alt="avatar">
+                  <div id="resultado" class="comentario">
+                    Les odio!
+                  </div>
                 </div>
               </section>
             </div>
@@ -261,7 +282,7 @@
       </div>
       <div class="col-xl-4 col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <h1>Oficinas</h1>
-        <img id="mapa" src="imagen.png" alt="mapa">
+        <img id="mapa" src="quienesSomos/imagen.png" alt="mapa">
       </div>
 
     </div>
