--- a/Javi.html
+++ b/Javi.html
@@ -155,7 +155,7 @@
 
                      <img src="quienesSomos/javi.jpg" alt="" id="Javi">
                      <h2>JAVIER</h2>
-                     <p>Me dedico normalmente a la parte de animaciones , musica y video en los proyectos, siendo mi especialidad CSS3 , el HTML5 y el JQUERY.Me considero una persona centrada en mi profesión con toques de locura, lo que resulta interesante para la profesión .</p>
+                     <p>Me dedico a la parte de animaciones , musica y video en los proyectos, siendo mi especialidad CSS3 , el HTML5 y el JQUERY. <br> Me caracterizo por mi actitud reservada, soy observador , metodico y paciente. Me gusta la logica y soy autodidacta.Me considero una persona centrada con toques de "sana locura".</p>
 
                      <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
                      <img src="javi/foto1.jpg" alt="" class="foto" id="foto1">
