--- a/Javi.html
+++ b/Javi.html
@@ -116,15 +116,15 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Inicio</a>
+                    <a class="nav-link" href="inicio.html">Inicio</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Quienes Somos</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Eric</a>
-                      <a class="dropdown-item" href="#">Celia</a>
+                      <a class="dropdown-item" href="Eric.html">Eric</a>
+                      <a class="dropdown-item" href="Celia.html">Celia</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Javier</a>
+                      <a class="dropdown-item" href="Javi.html">Javier</a>
                     </div>
                   </li>
                   <li class="nav-item">
@@ -134,7 +134,7 @@
                     <a class="nav-link" href="#">Catalogo</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="contacto.html">Contacto</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" href="#">Blog</a>
@@ -155,7 +155,7 @@
 
                      <img src="quienesSomos/javi.jpg" alt="" id="Javi">
                      <h2>JAVIER</h2>
-                     <p>Me dedico a la parte de animaciones , musica y video en los proyectos, siendo mi especialidad CSS3 , el HTML5 y el JQUERY. <br> Me caracterizo por mi actitud reservada, soy observador , metodico y paciente. Me gusta la logica y soy autodidacta.Me considero una persona centrada con toques de "sana locura".</p>
+                     <p>En los proyectos me gusta dedicarme a la parte de animaciones, musica y video. Utilizo CSS3 , HTML5 y JQUERY. <br> Tengo una actitud reservada, soy observador , meticuloso, metodico y paciente. Me gusta la logica y soy autodidacta. Me considero una persona centrada con toques de "sana locura".</p>
 
                      <h3 id="proyectos">PROYECTOS REALIZADOS</h3>
                      <img src="javi/foto1.jpg" alt="" class="foto" id="foto1">
@@ -165,7 +165,7 @@
                      <img src="javi/foto3.jpg" alt="" class="foto" id="foto3">
                      <!-- <p>Proyecto realizado para una tienda de ropa</p> -->
                      <div class="comentario">
-                       <p>"Algunas personas quieren que algo ocurra, otras sueñan con que pasara, otras hacen que suceda <strong>Michael Jordan"</strong></p>
+                       <p>"Algunas personas quieren que algo ocurra, otras sueñan con que pasara, otras hacen que suceda " <strong>Michael Jordan</strong></p>
 
                      </div>
                      <iframe width="560" height="315" src="https://www.youtube.com/embed/NJ8jxvzzzeQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
